browser/components/newtab/aboutwelcome/content/aboutwelcome.css
/* ... */
.onboardingContainer .helptext-img.footer {
  vertical-align: bottom;
}
.onboardingContainer .steps {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin-top: 0;
  padding-block: 16px 0;
  transition: var(--transition);
  z-index: -1;
}
.onboardingContainer .steps.has-helptext {
  padding-bottom: 0;
}
.onboardingContainer .steps .indicator {
  width: 0;
  height: 0;
  margin-inline-end: 4px;
  margin-inline-start: 4px;
  background: var(--grey-subtitle-1);
  border-radius: 5px;
  border: 3px solid var(--in-content-button-text-color);
  opacity: 0.25;
}
.onboardingContainer .steps .indicator.current {
  opacity: 1;
  border-color: var(--checkbox-checked-bgcolor);
}
.onboardingContainer .steps .indicator.current:last-of-type:first-of-type {
  opacity: 0;
}
.onboardingContainer .primary {
  font-size: 13px;
  line-height: 16px;
  padding: 11px 15px;
  transition: var(--transition);
}
.onboardingContainer .primary.rtamo {
  margin-top: 24px;
}
.onboardingContainer .noodle {
  display: block;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  position: absolute;
  transition: var(--transition);
}
.onboardingContainer .noodle:dir(rtl) {
  scale: -1 1;
}
.onboardingContainer .outline-L {
  background-image: url("chrome://activity-stream/content/data/content/assets/noodle-outline-L.svg");
}
.onboardingContainer .solid-L {
  background-image: url("chrome://activity-stream/content/data/content/assets/noodle-solid-L.svg");
  -moz-context-properties: fill;
  fill: var(--in-content-page-background);
}
.onboardingContainer .purple-C {
  background-image: url("chrome://activity-stream/content/data/content/assets/noodle-C.svg");
  -moz-context-properties: fill;
  fill: #E7258C;
}
.onboardingContainer .orange-L {
  background-image: url("chrome://activity-stream/content/data/content/assets/noodle-solid-L.svg");
  -moz-context-properties: fill;
  fill: #FFA437;
}
.onboardingContainer [pos=corner] {
  background-color: transparent;
  min-width: 700px;
}
.onboardingContainer [pos=corner] .section-left {
  display: flex;
  flex-direction: column;
  margin-inline-start: 6vw;
}
.onboardingContainer [pos=corner] .section-left .message-text {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.onboardingContainer [pos=corner] .section-left .message-text .spacer-top {
  flex: 2;
}
.onboardingContainer [pos=corner] .section-left .message-text .spacer-bottom {
  flex: 1;
}
.onboardingContainer [pos=corner] .section-left .message-text h1 {
  color: #FFF;
  font-weight: bold;
  font-size: clamp(48px, 7vw, 104px);
  line-height: 1em;
  margin: 0 6px;
  max-width: 5em;
  text-align: initial;
  white-space: pre-wrap;
}
.onboardingContainer [pos=corner] .section-left .attrib-text {
  height: 18px;
  margin-bottom: 25px;
  text-align: initial;
  font-size: 12px;
  line-height: 18px;
  color: #F9F9FB;
  text-shadow: 0 0 7px rgba(0, 0, 0, 0.6);
  transition-delay: 0.5s;
}
.onboardingContainer [pos=corner] .section-main {
  z-index: 1;
}
.onboardingContainer [pos=corner] .section-main .main-content {
  background: transparent;
  box-shadow: none;
  display: block;
  position: absolute;
  height: 350px;
  width: 295px;
  bottom: -60px;
  inset-inline-end: 80px;
  transition: var(--transition);
}
.onboardingContainer [pos=corner] .section-main .brand-logo {
  margin-top: 0;
  transition-delay: 1.2s;
}
.onboardingContainer [pos=corner] .section-main .primary,
.onboardingContainer [pos=corner] .section-main .secondary-cta:not(.top) {
  transition-delay: 1.7s;
}
.onboardingContainer [pos=corner] .section-main .secondary-cta.top {
  transition-delay: 0.5s;
}
.onboardingContainer [pos=corner] .section-main .welcome-text {
  transition-delay: 1.2s;
}
.onboardingContainer [pos=corner] .solid-L {
  width: 1300px;
  height: 1050px;
  bottom: -390px;
  inset-inline-end: -640px;
  transform: rotate(-80deg);
  transition-delay: 0.5s;
}
.onboardingContainer [pos=corner] .orange-L {
  width: 466px;
  height: 356px;
  bottom: 270px;
  inset-inline-end: -245px;
  transition-delay: 0.8s;
}
.onboardingContainer [pos=corner] .purple-C {
  width: 467px;
  height: 382px;
  bottom: -100px;
  inset-inline-end: 125px;
  transform: rotate(-75deg);
  transition-delay: 0.8s;
}
.onboardingContainer .screen-1 .section-main {
  z-index: 1;
  margin: auto;
}
.onboardingContainer .screen-1 .outline-L {
  width: 87px;
  height: 80px;
  transform: rotate(10deg) translate(-30%, 200%);
  transition-delay: 0.4s;
  z-index: 2;
}
.onboardingContainer .screen-1 .orange-L {
  width: 550px;
  height: 660px;
  transform: rotate(-155deg) translate(11%, -18%);
  transition-delay: 0.2s;
}
.onboardingContainer .screen-1 .purple-C {
  width: 310px;
  height: 260px;
  transform: translate(-18%, -67%);
}
.onboardingContainer .screen-1 .yellow-circle {
  width: 165px;
  height: 165px;
  border-radius: 50%;
  transform: translate(230%, -5%);
  background: #952BB9;
  transition-delay: -0.2s;
}
.onboardingContainer .dialog-initial .brand-logo {
  transition-delay: 0.6s;
}
.onboardingContainer .dialog-initial .welcome-text {
  transition-delay: 0.8s;
}
.onboardingContainer .dialog-initial .colorway-variations,
.onboardingContainer .dialog-initial .tiles-theme-section {
  transition-delay: 0.9s;
}
.onboardingContainer .dialog-initial .primary,
.onboardingContainer .dialog-initial .secondary-cta,
.onboardingContainer .dialog-initial .steps {
  transition-delay: 1s;
}
.onboardingContainer .screen:not(.dialog-initial):not([pos=corner]) .colorway-variations,
.onboardingContainer .screen:not(.dialog-initial):not([pos=corner]) .tiles-theme-section {
  transition-delay: 0.2s;
}
.onboardingContainer .screen:not(.dialog-initial):not([pos=corner]) .primary,
.onboardingContainer .screen:not(.dialog-initial):not([pos=corner]) .secondary-cta {
  transition-delay: 0.4s;
}
.onboardingContainer .screen-2 .section-main {
  z-index: 1;
  margin: auto;
}
/* ... */

